<resources>
    <string name="app_name">Bikewise</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="exit">Exit</string>
    <string name="welcome">Welcome</string>
    <string name="username">username</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>