<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@drawable/grad_bg"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="40dp"
        android:layout_marginLeft="40dp"
        android:layout_centerInParent="true">

        <ImageView
            android:id="@+id/imgBicycle"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/bicycle"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"/>

        <RelativeLayout
            android:id="@+id/rellay1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/imgBicycle"
            android:visibility="gone">

            <TextView
                android:id="@+id/tv_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/login"
                android:textSize="30sp"
                android:textColor="@color/colorWhite"
                android:fontFamily="sans-serif-medium"/>

            <LinearLayout
                android:id="@+id/section1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_below="@id/tv_login"
                android:layout_marginTop="20dp">
                
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/email"
                        android:fontFamily="sans-serif-light"
                        android:textAllCaps="true"
                        android:textSize="15sp"
                        android:textColor="@color/colorWhite"/>

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:background="@drawable/et_bg"
                        android:layout_marginTop="5dp"
                        android:textSize="15dp"
                        android:fontFamily="sans-serif-light"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/password"
                        android:fontFamily="sans-serif-light"
                        android:textAllCaps="true"
                        android:textSize="15sp"
                        android:textColor="@color/colorWhite"/>

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:background="@drawable/et_bg"
                        android:layout_marginTop="5dp"
                        android:textSize="15dp"
                        android:fontFamily="sans-serif-light"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        />
                </LinearLayout>

            </LinearLayout>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_below="@id/section1"
                android:text="Login Now"
                android:textAllCaps="false"
                android:background="@drawable/btn_bg"
                android:textColor="@color/colorWhite"
                android:fontFamily="sans-serif-medium"
                android:paddingLeft="70dp"
                android:paddingRight="70dp"
                android:layout_centerHorizontal="true"
                android:textSize="16sp"
                android:layout_marginTop="50dp"/>

        </RelativeLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/signUpExitSection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_alignParentBottom="true"
        android:visibility="gone">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorTransparent"
            android:text="@string/sign_up"
            android:textAllCaps="true"
            android:fontFamily="sans-serif"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="@color/colorTransparent"
            android:text="@string/exit"
            android:textAllCaps="true"
            android:fontFamily="sans-serif"/>
    </RelativeLayout>

</RelativeLayout>